kubernetes/ingress/try1-fails/pg-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pg-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pg
    spec:
      containers:
        - name: pg
          image: postgres:12.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdb
      volumes:
        - name: pgdb
          persistentVolumeClaim:
            claimName: pg-pv-claim
