kubernetes/ingress/try1-fails/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  labels:
    app: pg
spec:
  type: NodePort
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app: pg
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pg-service
#   labels:
#     app: pg
# spec:
#   type: ClusterIP
#   selector:
#     app: pg
#   ports:
#     - protocol: TCP
#       name: http
#       port: 80
#       targetPort: 5432
