kubernetes/ingress/try1-fails/pg-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pg-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: pg
    http:
      paths:
      - path: /
        backend:
          serviceName: pg-service
          servicePort: 5432
